chore: update hackathon sign up btns

--- a/layouts/community/events/hackathon2020.html
+++ b/layouts/community/events/hackathon2020.html
@@ -16,7 +16,7 @@
 		<div class="container">
 			<div class="banner__inner"></div>
 			<div class="banner__buttons">
-				<a class="btn secondary uppercase" href="https://forms.pingcap.com/f/tidb-hackathon-2020" target="_blank" rel="noopener noreferrer">Sign Up</a>
+				<a class="btn secondary uppercase btn-disabled">REGISTRATION CLOSED</a>
 				<a class="btn uppercase" href="https://slack.tidb.io/invite?team=tidb-community&channel=tidb-hackathon&ref=website" target="_blank" rel="noopener noreferrer">Slack Channel</a>
 			</div>
 		</div>
@@ -107,6 +107,8 @@
 				{{- end -}}
 				{{- if $i.btn_link -}}
 					<a class="btn uppercase" href="{{ $i.btn_link }}" target="_blank" rel="noopener noreferrer">{{ $i.btn_text }}</a>
+				{{- else if $i.disabled -}}
+					<a class="btn btn-disabled">{{ $i.btn_text }}</a>
 				{{- else -}}
 					<button class="btn uppercase j-open-{{$i.modal_name}}-modal">{{ $i.btn_text }}</button>
 					{{- partial "community-cn/modal" (dict "lang" "en" "type" $i.modal_name "title" $i.btn_text "modal_content" $i.modal_content) -}}
