--- a/layouts/community-cn/hackathon2020.html
+++ b/layouts/community-cn/hackathon2020.html
@@ -17,7 +17,7 @@
 		<div class="container">
 			<div class="banner__inner"></div>
 			<div class="banner__buttons">
-				<a class="btn secondary" href="https://forms.pingcap.com/f/tidb-hackathon-2020" target="_blank" rel="noopener noreferrer">立即报名</a>
+				<a class="btn secondary btn-disabled">报名截止</a>
 				<a class="btn" href="https://slack.tidb.io/invite?team=tidb-community&channel=tidb-hackathon&ref=website" target="_blank" rel="noopener noreferrer">官方 SLACK</a>
 			</div>
 		</div>
@@ -106,6 +106,8 @@
 				<p class="schedule__detail {{ if $i.align_left }}align-left{{ end }}">{{ $i.detail }}</p>
 				{{- if $i.btn_link -}}
 					<a class="btn" href="{{ $i.btn_link }}" target="_blank" rel="noopener noreferrer">{{ $i.btn_text }}</a>
+				{{- else if $i.disabled -}}
+					<a class="btn btn-disabled">{{ $i.btn_text }}</a>
 				{{- else -}}
 					<button class="btn j-open-{{$i.modal_name}}-modal">{{ $i.btn_text }}</button>
 					{{- partial "community-cn/modal" (dict "type" $i.modal_name "title" $i.btn_text "modal_content" $i.modal_content) -}}
