--- a/src/less/community/hackathon2020.less
+++ b/src/less/community/hackathon2020.less
@@ -59,6 +59,10 @@
     transition: all 0.3s ease;
     outline: none;
 
+    &.btn-disabled {
+      cursor: not-allowed;
+    }
+
     &.secondary {
       background-color: @secondaryGreen;
       color: @mainColor;
@@ -865,6 +869,7 @@
     }
 
     .banner__buttons {
+      display: flex;
       bottom: 3em;
       width: 100%;
       text-align: center;
