--- a/layouts/community-cn/list.html
+++ b/layouts/community-cn/list.html
@@ -27,7 +27,7 @@
                             <span class="btn-text">了解社区</span>
                         </button>
                     </a>
-                    <a href="/community-cn/developer-group/#contributor">
+                    <a href="http://developer.tidb.io/" target="_blank" rel="noopener noreferrer">
                         <button class="community-btns">
                             <span class="arrow"><img src="/images/svgs/white-right-arrow.svg" alt="Arrow" /></span>
                             <span class="btn-text">成为 Contributor</span>
