chore: hide community members on community page

--- a/layouts/community-cn/organization.html
+++ b/layouts/community-cn/organization.html
@@ -82,7 +82,7 @@ Community Organization
     </div>
   </div>
 
-  <div class="community-members">
+  <!-- <div class="community-members">
     <div class="container">
       <div class="section-title">社区成员</div>
       <div class="developer-group-members">
@@ -314,7 +314,7 @@ Community Organization
         回到社区主页
       </button>
     </a>
-  </div>
+  </div> -->
 </div>
 {{- end -}}
 
