chore: add hackathon 2020 winners

--- a/src/less/community/hackathon2020.less
+++ b/src/less/community/hackathon2020.less
@@ -367,6 +367,126 @@
   }
 }
 
+.hackathon2020__section-winners {
+  max-width: 1200px;
+  margin: 0 auto;
+  text-align: center;
+
+  .winner-team {
+    margin: 30px 15px;
+    width: 250px;
+    height: 335px;
+    position: relative;
+    background-color: #FFFFFF;
+    box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.05),
+    0 0 0 1px rgba(10, 10, 10, 0.02);
+  }
+
+  .list {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+  }
+
+  .team-info {
+    text-align: center;
+    color: #1A1A24;
+    margin-top:18px;
+
+    p {
+      margin: 15px 20px;
+    }
+
+    .award {
+      position: relative;
+      font-weight: 600;
+      font-size: 20px;
+    }
+
+    .project-name {
+      opacity: 0.5;
+      font-size: 16px;
+    }
+  }
+
+  .misc {
+    margin: 0 15px;
+    position: absolute;
+    bottom: 15px;
+    width: 90%;
+
+    .misc-btns {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: space-around;
+      position: relative;
+    }
+
+    .GitHub-repo {
+      position: relative;
+      background-color: #F7F8F9;
+      color: #4444FD;
+      border: none;
+      padding: 10px;
+      border-radius: 4px;
+      font-size: 12px;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #4444FD;
+        color: white;
+      }
+    }
+  }
+
+  .thumbnail {
+    width: 100%;
+    height: 167px;
+    position: relative;
+
+    .thumbnail-img {
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
+
+    .thumbnail-text-click {
+      opacity: 1 !important;
+    }
+
+    .thumbnail-text {
+      .thumbnail-img();
+
+      font-size: 14px;
+      position: absolute;
+      top: 0;
+      background-color: #333333;
+      color: white;
+      opacity: 0;
+      padding: 1rem;
+      line-height: 1.7;
+      transition: opacity 0.5s ease;
+      overflow: auto;
+    }
+  }
+
+  .more-project-btn {
+    border: 1px solid #0D309E;
+    border-radius: 30px;
+    color: #0D309E;
+    background-color: white;
+    padding: 15px 25px;
+    font-size: 16px;
+    margin: 4rem 0;
+    cursor: pointer;
+
+    &:hover {
+      background-color: #0D309E;
+      color: white;
+    }
+  }
+}
+
 .moments {
   display: flex;
   justify-content: center;
