chore: update business contact info

--- a/layouts/about-cn/list.html
+++ b/layouts/about-cn/list.html
@@ -144,13 +144,14 @@
         <h2 class="title">联系我们</h2>
         <div class="info-2">
             <div class="item">
-                <span class="office-name">电话：</span>
+                <span class="office-name">商务咨询：</span>
                 <span>4006790886，</span>
-                <span>8610-58400041</span>
+                <span>010-58400041</span>
+                <span>info@pingcap.com</span>
             </div>
             <div class="item">
-                <span class="office-name">技术及上商务咨询：</span>
-                <span>info@pingcap.com</span>
+                <span class="office-name">前台总机：</span>
+                <span>010-53326356</span>
             </div>
             <div class="item">
                 <span class="office-name">媒体合作：</span>
@@ -195,13 +196,14 @@
             </div>
             <div class="col-2">
                 <div class="item">
-                    <p class="office-name">电话</p>
+                    <p class="office-name">商务咨询</p>
                     <p>4006790886</p>
-                    <p>8610-58400041</p>
+                    <p>010-58400041</p>
+                    <p>info@pingcap.com</p>
                 </div>
                 <div class="item">
-                    <p class="office-name">技术及商务咨询</p>
-                    <p>info@pingcap.com</p>
+                    <p class="office-name">前台总机</p>
+                    <p>010-53326356</p>
                 </div>
                 <div class="item">
                     <p class="office-name">媒体合作</p>
