--- a/src/less/community/hackathon2020.less
+++ b/src/less/community/hackathon2020.less
@@ -252,6 +252,11 @@
     height: 16em;
     background: left / contain no-repeat
       url('https://download.pingcap.com/images/community/hackathon2020/banner-inner.svg');
+
+    &.hacking-camp {
+      background: left / contain no-repeat
+      url('https://download.pingcap.com/images/community/hacking-camp-2021-s1/banner-inner.png');
+    }
   }
 
   .banner__buttons {
@@ -319,7 +324,7 @@
 }
 
 .hackathon2020__intro {
-  max-width: 54em;
+  max-width: 55em;
   margin: 0 auto;
 
   &:not(:last-child) {
@@ -372,6 +377,10 @@
   margin: 0 auto;
   text-align: center;
 
+  .desc {
+    margin: 1rem;
+  }
+
   .winner-team {
     margin: 30px 15px;
     width: 250px;
@@ -380,6 +389,11 @@
     background-color: #FFFFFF;
     box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.05),
     0 0 0 1px rgba(10, 10, 10, 0.02);
+
+    &.hacking-camp {
+      margin: 30px;
+      height: 280px;
+    }
   }
 
   .list {
@@ -764,6 +778,10 @@
   align-items: center;
   width: 200px;
   margin: 1em 3em 3em;
+
+  &.hacking-camp {
+    margin: 1em 6em 3em;
+  }
 }
 
 .tutor__avatar {
@@ -782,6 +800,10 @@
 .tutor__name {
   margin-bottom: 0.5em;
   font-size: 1.125em;
+
+  &.hacking-camp {
+    font-weight: 600;
+  }
 }
 
 .hackathon2020__section-faq {
@@ -880,6 +902,10 @@
     height: 3em;
     width: auto;
     margin: 2em 4em;
+  }
+
+  &.hacking-camp {
+    padding-bottom: 3rem;
   }
 }
 
