chore: update hacking camp 2021 content

--- a/layouts/community-cn/hacking-camp-2021-season-1.html
+++ b/layouts/community-cn/hacking-camp-2021-season-1.html
@@ -13,10 +13,7 @@
 
 {{- define "main" -}}
 <div class="hackathon2020">
-    <section class="hackathon2020__banner">
-		<div class="container">
-			<div class="banner__inner hacking-camp"></div>
-		</div>
+    <section class="hacking-cam2021__banner">
 	</section>
 
 	<section class="hackathon2020__navbar navbar-sticky">
@@ -45,7 +42,7 @@
 				2021 年 1 月结束的 TiDB 黑客马拉松中诞生了许多明星项目，如 UDF、图数据库、文档自动纠错等等，为 TiDB 构建了丰富的生态和卓越的性能提升，令人不禁感叹「社区的力量」。
 			</p>
 			<p class="hackathon2020__intro">
-				为了让这些项目能够真正落地，继续在社区中发光发热，PingCAP 计划在 2 月举办一个为期 8 周的 Hacking Camp。由 PingCAP 提供导师，帮助项目团队一起制定合理的后续计划，并将向社区公开阶段性成果。
+				为了让这些项目能够真正落地，继续在社区中发光发热，TiDB 社区联合经纬中国计划在 2 月举办一个为期 8周的 Hacking Camp。本次活动将邀请 PingCAP 及合作伙伴提供导师，帮助项目团队一起制定合理的后续计划和商业方向，并将向社区公开阶段性成果。
 			</p>
 			<p class="hackathon2020__intro">第一期 Hacking Camp 结束后将由每支队伍的导师评估是否可以顺利毕业。所有毕业的团队队员将获得 TiDB 定制周边一份。</p>
 		</div>
@@ -111,7 +108,24 @@
     </section>
 
 	<section class="hackathon2020__section">
-		<h2 class="section__title" id="partners">支持企业及社区</h2>
+		<h2 class="section__title" id="partners">赞助合作</h2>
+		<h3 class="sponsor-type">独家冠名</h3>
+        <div class="list-flex container partners-list hacking-camp">
+			{{- range $idx, $i := .Site.Data.hacking_camp_2021_s1.exclusive -}}
+				<a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
+					<img class="lazy" data-original="{{ $i.img }}" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
+				</a>
+            {{- end -}}
+        </div>
+		<h3 class="sponsor-type">协办方</h3>
+        <div class="list-flex container partners-list hacking-camp">
+			{{- range $idx, $i := .Site.Data.hacking_camp_2021_s1.sponsors1 -}}
+				<a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
+					<img class="lazy" data-original="{{ $i.img }}" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
+				</a>
+            {{- end -}}
+        </div>
+		<h3 class="sponsor-type">支持企业及社区</h3>
         <div class="list-flex container partners-list hacking-camp">
 			{{- range $idx, $i := .Site.Data.hacking_camp_2021_s1.sponsors2 -}}
 				<a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
