--- a/src/less/community/hackathon2020.less
+++ b/src/less/community/hackathon2020.less
@@ -91,8 +91,7 @@
     width: 100%;
     height: 10em;
     padding: 3em;
-    background: center / cover no-repeat
-      url('https://download.pingcap.com/images/community/hackathon2020/bg-banner.jpg');
+    background: center / cover no-repeat url('https://download.pingcap.com/images/community/hackathon2020/bg-banner.jpg');
 
     .title {
       color: #fff;
@@ -110,8 +109,7 @@
       width: 16em;
       top: 1em;
       right: 3em;
-      background: center / contain no-repeat
-        url('https://download.pingcap.com/images/community/hackathon2020/modal-header-inner.svg');
+      background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/modal-header-inner.svg');
     }
   }
 
@@ -169,8 +167,7 @@
         width: 1.5em;
         height: 1.5em;
         border-radius: 50%;
-        background: center / cover no-repeat
-          url('https://download.pingcap.com/images/community/hackathon2020/spot.svg');
+        background: center / cover no-repeat url('https://download.pingcap.com/images/community/hackathon2020/spot.svg');
       }
     }
 
@@ -232,16 +229,30 @@
   }
 }
 
+.hacking-cam2021__banner {
+  background: url(https://download.pingcap.com/images/community/hacking-camp-2021-s1/banner-inner.png) no-repeat;
+  padding-top: 28%;
+  position: relative;
+  width: 100%;
+  height: 0;
+  background-size: cover !important;
+  background-position: center !important;
+  margin-top: 2rem;
+}
+
 .hackathon2020__banner {
   width: 100%;
   height: 0;
-  background: center / cover no-repeat
-    url('https://download.pingcap.com/images/community/hackathon2020/bg-banner.jpg');
+  background: center / cover no-repeat url('https://download.pingcap.com/images/community/hackathon2020/bg-banner.jpg');
   margin-top: @headerHeight;
   padding: 30em 1em 0 1em;
 
   .container {
     position: relative;
+  }
+
+  .hacking-camp {
+    background: center / contain no-repeat url('https://download.pingcap.com/images/community/hacking-camp-2021-s1/banner-inner.png');
   }
 
   .banner__inner {
@@ -250,13 +261,7 @@
     left: 0;
     width: 48em;
     height: 16em;
-    background: left / contain no-repeat
-      url('https://download.pingcap.com/images/community/hackathon2020/banner-inner.svg');
-
-    &.hacking-camp {
-      background: left / contain no-repeat
-      url('https://download.pingcap.com/images/community/hacking-camp-2021-s1/banner-inner.png');
-    }
+    background: left / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/banner-inner.svg');
   }
 
   .banner__buttons {
@@ -310,8 +315,7 @@
 
 .hackathon2020__section-about {
   .container {
-    background: center / contain no-repeat
-      url('https://download.pingcap.com/images/community/hackathon2020/infinite-grey.svg');
+    background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/infinite-grey.svg');
   }
 
   .image-container {
@@ -355,8 +359,7 @@
   .highlight__title {
     height: 3em;
     line-height: 3em;
-    background: center / contain no-repeat
-      url('https://download.pingcap.com/images/community/hackathon2020/infinite-blue.svg');
+    background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/infinite-blue.svg');
     font-size: 1.25em;
     color: @secondaryGreen;
   }
@@ -388,7 +391,7 @@
     position: relative;
     background-color: #FFFFFF;
     box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.05),
-    0 0 0 1px rgba(10, 10, 10, 0.02);
+      0 0 0 1px rgba(10, 10, 10, 0.02);
 
     &.hacking-camp {
       margin: 30px;
@@ -405,7 +408,7 @@
   .team-info {
     text-align: center;
     color: #1A1A24;
-    margin-top:18px;
+    margin-top: 18px;
 
     p {
       margin: 15px 20px;
@@ -594,8 +597,7 @@
   margin: 1em 1.5em;
   padding: 2em 3em;
   border-radius: 10px;
-  background: center / cover no-repeat
-    url('https://download.pingcap.com/images/community/hackathon2020/bg-banner.jpg');
+  background: center / cover no-repeat url('https://download.pingcap.com/images/community/hackathon2020/bg-banner.jpg');
   color: #fff;
 
   .btn {
@@ -620,8 +622,7 @@
 .schedule__title {
   height: 4em;
   line-height: 2em;
-  background: center / contain no-repeat
-    url('https://download.pingcap.com/images/community/hackathon2020/infinite-dark-blue.svg');
+  background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/infinite-dark-blue.svg');
   color: @secondaryGreen;
 
   .name {
@@ -979,8 +980,7 @@
       left: 2em;
       width: 12em;
       height: 12em;
-      background: center / contain no-repeat
-        url('https://download.pingcap.com/images/community/hackathon2020/printing-wormhole.svg');
+      background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/printing-wormhole.svg');
     }
 
     &::after {
@@ -990,19 +990,16 @@
       right: 2em;
       width: 12em;
       height: 12em;
-      background: center / contain no-repeat
-        url('https://download.pingcap.com/images/community/hackathon2020/printing-ripple.svg');
+      background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/printing-ripple.svg');
     }
 
     &.hackathon2020__section-faq {
       &::before {
-        background: center / contain no-repeat
-          url('https://download.pingcap.com/images/community/hackathon2020/printing-wormhole-blue.svg');
+        background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/printing-wormhole-blue.svg');
       }
 
       &::after {
-        background: center / contain no-repeat
-          url('https://download.pingcap.com/images/community/hackathon2020/printing-ripple-blue.svg');
+        background: center / contain no-repeat url('https://download.pingcap.com/images/community/hackathon2020/printing-ripple-blue.svg');
       }
     }
   }
@@ -1122,6 +1119,12 @@
 }
 
 @media (max-width: 428px) {
+  .hacking-cam2021__banner {
+    background: url(https://download.pingcap.com/images/community/activities/home-tidb-hacking-camp-2021-carousel.png) no-repeat;
+    padding-top: 68%;
+    margin-top: 3rem;
+  }
+
   .hackathon2020 .modal__header {
     padding: 3em 1em;
 
