--- a/src/less/community/hackathon2020.less
+++ b/src/less/community/hackathon2020.less
@@ -230,7 +230,7 @@
 }
 
 .hacking-cam2021__banner {
-  background: url(https://download.pingcap.com/images/community/hacking-camp-2021-s1/banner-inner.png) no-repeat;
+  background: url(https://download.pingcap.com/images/community/hacking-camp-2021-s1/banner-inner-new.png) no-repeat;
   padding-top: 28%;
   position: relative;
   width: 100%;
@@ -903,6 +903,10 @@
     height: 3em;
     width: auto;
     margin: 2em 4em;
+
+    &.exclusive {
+      height: 5em;
+    }
   }
 
   &.hacking-camp {
