chore: add sponsors to hacking camp

--- a/layouts/community-cn/hacking-camp-2021-season-1.html
+++ b/layouts/community-cn/hacking-camp-2021-season-1.html
@@ -121,7 +121,7 @@
         <div class="list-flex container partners-list hacking-camp">
 			{{- range $idx, $i := .Site.Data.hacking_camp_2021_s1.sponsors1 -}}
 				<a href="{{ $i.link }}" target="_blank" rel="noopener noreferrer">
-					<img class="lazy" data-original="{{ $i.img }}" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
+					<img class="lazy {{ if $i.bigImg }}big-img{{ end }}" data-original="{{ $i.img }}" src="/images/svgs/loader-spinner.svg" alt="sponsor logo">
 				</a>
             {{- end -}}
         </div>
