--- a/src/less/community/hackathon2020.less
+++ b/src/less/community/hackathon2020.less
@@ -907,6 +907,11 @@
     &.exclusive {
       height: 5em;
     }
+
+    &.big-img {
+      margin: 0;
+      height: 6rem;
+    }
   }
 
   &.hacking-camp {
