Add katex support in blog-cn

--- a/layouts/blog-cn/single.html
+++ b/layouts/blog-cn/single.html
@@ -51,6 +51,7 @@
                         </li>
                     </ul>
                     <div class="blog-text">{{- .Content -}}</div>
+                    {{ if .Params.katex }}{{ partial "archives/katex.html" . }}{{ end }}
                 </div>
                 {{- partial "archives/post-share-cn.html" . -}}
             </div>
