--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -27,6 +27,7 @@
 .weekly,
 .recruit-single {
   padding: 0 @horizontalPadding;
+  min-height: 70vh;
 
   .container {
     display: flex;
@@ -174,6 +175,10 @@
   }
 
   .markdown-body {
+    &.policyTerms {
+      padding-top: 3rem;
+    }
+
     h1,
     h2 {
       border-bottom: none;
@@ -186,7 +191,7 @@
       line-height: 1.6;
       padding: 0;
     }
-    
+
     table {
       th, td {
         text-align: left;
@@ -736,7 +741,7 @@ a.letter::before {
     .sidebar-page {
       padding: 0 1rem 1rem 0;
     }
-  } 
+  }
 }
 
 @media (min-width: 880px) {
