chore: update search default language

--- a/layouts/partials/layout/search.html
+++ b/layouts/partials/layout/search.html
@@ -11,6 +11,8 @@
         if (key === "Enter") {
             if ($('#search-input').data('lang') == 'cn') {
                 lang = 'zh'
+            } else {
+                lang = 'en'
             }
 
             const query = $('#search-input').val()
