chore: update careers URL

--- a/layouts/partials/layout/footer-cn.html
+++ b/layouts/partials/layout/footer-cn.html
@@ -40,7 +40,7 @@
                 <h4 class="list-title"><strong>公司</strong></h4>
                 <ul>
                 <li><a href="/about-cn/">关于我们</a></li>
-                <li><a href="https://job.pingcap.com/" target="_blank" onclick="trackViews('footer-recruit-join', 'recruit-join_view')">招贤纳士</a>
+                <li><a href="https://careers.pingcap.com" target="_blank" onclick="trackViews('footer-recruit-join', 'recruit-join_view')">招贤纳士</a>
                 </li>
                 <li><a href="/about-cn/news/">新闻报道</a></li>
                 <li><a href="/zh/privacy-policy/">隐私申明</a></li>
