--- a/layouts/about-cn/list.html
+++ b/layouts/about-cn/list.html
@@ -58,7 +58,7 @@
 
             <p>目前，PingCAP 已经向包括中国、美国、欧洲、日本、东南亚等国家和地区，超过 1500 家企业提供服务，涉及金融、运营商、制造、零售、互联网、政府等多个行业。</p>
         </div>
-        <a class="link" href="https://job.pingcap.com/" target="_blank"
+        <a class="link" href="https://careers.pingcap.com" target="_blank"
             onclick="trackViews('about-cn-join-us-top', 'recruit_view')">
             <button class="round-corner-btn">
                 <span
@@ -257,7 +257,7 @@
     <div class="container">
         <h2 class="title">更多职位正虚位以待！</h2>
         <div class="floating-ele">
-            <a class="link" href="https://job.pingcap.com/" target="_blank"
+            <a class="link" href="https://careers.pingcap.com" target="_blank"
                 onclick="trackViews('about-cn-join-us-bottom', 'recruit_view')">
                 <button class="round-corner-btn">
                     <span class="arrow">{{ partial "svgs/icon-right-arrow.svg" (dict "fill" "white" "width" 16 "height" 16 ) }}</span>
