chore: add national internet security number

--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -139,9 +139,18 @@
 }
 
 .prepared-num {
+  display: inline-flex;
   color: #707070;
   font-size: 0.7rem;
   margin-left: 2rem;
+
+  img {
+    height: 18px;
+  }
+
+  p {
+    margin-left: 5px;
+  }
 }
 
 .copyright-btn-en {
