--- a/layouts/partials/layout/footer-cn.html
+++ b/layouts/partials/layout/footer-cn.html
@@ -5,45 +5,48 @@
             <div class="flex-list">
                 <h4 class="list-title"><strong>产品</strong></h4>
                 <ul>
-                <li><a href="/docs-cn/v3.0/" onclick="trackViews('footer-product-tidb', 'docs-cn_view')">TiDB</a></li>
-                <li><a href="/docs-cn/v3.0/reference/tispark/">TiSpark</a></li>
-                <li><a href="/docs-cn/v3.0/roadmap/">TiDB 路线图</a></li>
+                    <li><a href="/docs-cn/v3.0/" onclick="trackViews('footer-product-tidb', 'docs-cn_view')">TiDB</a>
+                    </li>
+                    <li><a href="/docs-cn/v3.0/reference/tispark/">TiSpark</a></li>
+                    <li><a href="/docs-cn/v3.0/roadmap/">TiDB 路线图</a></li>
                 </ul>
             </div>
             <div class="flex-list">
                 <h4 class="list-title"><strong>文档</strong></h4>
                 <ul>
-                <li><a href="https://docs.pingcap.com/zh/tidb/v4.0/quick-start-with-tidb">快速入门</a></li>
-                <li><a href="/blog-cn/tidb-best-practice/">最佳实践</a></li>
-                <li><a href="/docs-cn/stable/faq/tidb/">常见问题解答</a></li>
-                <li><a href="/docs-cn/stable/reference/tools/user-guide/">TiDB 周边工具</a></li>
-                <li><a href="https://docs.pingcap.com/zh/tidb/dev/release-notes">版本发布说明</a></li>
+                    <li><a href="https://docs.pingcap.com/zh/tidb/v4.0/quick-start-with-tidb">快速入门</a></li>
+                    <li><a href="/blog-cn/tidb-best-practice/">最佳实践</a></li>
+                    <li><a href="/docs-cn/stable/faq/tidb/">常见问题解答</a></li>
+                    <li><a href="/docs-cn/stable/reference/tools/user-guide/">TiDB 周边工具</a></li>
+                    <li><a href="https://docs.pingcap.com/zh/tidb/dev/release-notes">版本发布说明</a></li>
                 </ul>
             </div>
             <div class="flex-list">
                 <h4 class="list-title"><strong>资源</strong></h4>
                 <ul>
-                <li><a href="/blog-cn/">博客</a></li>
-                <li><a href="https://github.com/pingcap" target="_blank">GitHub</a></li>
-                <li><a href="https://book.tidb.io" target="_blank">TiDB in Action</a></li>
-                <li><a href="https://university.pingcap.com/"
-                    onclick="trackViews('footer-source-university', 'pingcap-university_view')" target="_blank">PingCAP
-                    University</a></li>
-                <li><a href="/solutions/intel/"
-                    onclick="trackViews('footer-resource-solutions', 'solutions_view')" >联合解决方案</a></li>
-                <li><a href="https://asktug.com/"
-                    onclick="trackViews('footer-resource-asktug', 'asktug_view')" target="_blank">Ask TUG</a></li>
-                <!-- <li><a href="https://www.youtube.com/watch?v=dijsN0bddck" target="_blank">技术分享</a></li> -->
+                    <li><a href="/blog-cn/">博客</a></li>
+                    <li><a href="https://github.com/pingcap" target="_blank">GitHub</a></li>
+                    <li><a href="https://book.tidb.io" target="_blank">TiDB in Action</a></li>
+                    <li><a href="https://university.pingcap.com/"
+                            onclick="trackViews('footer-source-university', 'pingcap-university_view')"
+                            target="_blank">PingCAP
+                            University</a></li>
+                    <li><a href="/solutions/intel/"
+                            onclick="trackViews('footer-resource-solutions', 'solutions_view')">联合解决方案</a></li>
+                    <li><a href="https://asktug.com/" onclick="trackViews('footer-resource-asktug', 'asktug_view')"
+                            target="_blank">Ask TUG</a></li>
+                    <!-- <li><a href="https://www.youtube.com/watch?v=dijsN0bddck" target="_blank">技术分享</a></li> -->
                 </ul>
             </div>
             <div class="flex-list">
                 <h4 class="list-title"><strong>公司</strong></h4>
                 <ul>
-                <li><a href="/about-cn/">关于我们</a></li>
-                <li><a href="https://careers.pingcap.com" target="_blank" onclick="trackViews('footer-recruit-join', 'recruit-join_view')">招贤纳士</a>
-                </li>
-                <li><a href="/about-cn/news/">新闻报道</a></li>
-                <li><a href="/zh/privacy-policy/">隐私申明</a></li>
+                    <li><a href="/about-cn/">关于我们</a></li>
+                    <li><a href="https://careers.pingcap.com" target="_blank"
+                            onclick="trackViews('footer-recruit-join', 'recruit-join_view')">招贤纳士</a>
+                    </li>
+                    <li><a href="/about-cn/news/">新闻报道</a></li>
+                    <li><a href="/zh/privacy-policy/">隐私申明</a></li>
                 </ul>
             </div>
         </div>
@@ -67,7 +70,13 @@
     </div>
     <div class="container copyright-container">
         <p class="copyright">&copy; 2021 北京平凯星辰科技发展有限公司</p>
-        <a href="{{ or $data_i18_link .Params.data_i18_page_link }}" class="copyright-btn-lang copyright-btn-en" id="lang">English</a>
+        <a href="{{ or $data_i18_link .Params.data_i18_page_link }}" class="copyright-btn-lang copyright-btn-en"
+            id="lang">English</a>
         <a href="https://beian.miit.gov.cn/" class="prepared-num">京 ICP 备 16046278 号 - 2</a>
+        <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010802035112" class="prepared-num">
+            <img src="/images/beian.png" />
+            <p style="margin: 0px 0px 0px 5px;">京公网安备
+                11010802035112号</p>
+        </a>
     </div>
 </footer>
