chore: update contact info and add three new community careers

--- a/layouts/about-cn/list.html
+++ b/layouts/about-cn/list.html
@@ -158,7 +158,7 @@
                 <span>pr@pingcap.com</span>
             </div>
             <div class="item">
-                <a href="https://app.ma.scrmtech.com/svip/IndexCustomerForm/CustomerIndex?pf_uid=19697_1864&is_follow=yes&pf_type=3&id=5702&channel=9034" style="color: #788eff;" target="_blank">
+                <a href="https://page.ma.scrmtech.com/form/index?pf_uid=19697_1864&id=4240&channel=9034" style="color: #788eff;" target="_blank">
                     <p class="office-name">或让我们与您联系</p>
                 </a>
             </div>
@@ -210,7 +210,7 @@
                     <p>pr@pingcap.com</p>
                 </div>
                 <div class="item">
-                    <a href="https://app.ma.scrmtech.com/svip/IndexCustomerForm/CustomerIndex?pf_uid=19697_1864&is_follow=yes&pf_type=3&id=5702&channel=9034" style="color: #788eff;" target="_blank">
+                    <a href="https://page.ma.scrmtech.com/form/index?pf_uid=19697_1864&id=4240&channel=9034" style="color: #788eff;" target="_blank">
                         <p class="office-name">或让我们与您联系</p>
                     </a>
                 </div>
