--- a/layouts/partials/layout/footer-cn.html
+++ b/layouts/partials/layout/footer-cn.html
@@ -57,6 +57,7 @@
                     <li><a href="/" class="tel"  target="_blank">{{ partial "svgs/icon-phone.svg" (dict "width" 18 "height" 19 ) }} 商务咨询：</a></li>
                     <li class="tel-li">4006790886</li>
                     <li class="tel-li">010-58400041</li>
+                <li><a href="https://page.ma.scrmtech.com/form/index?pf_uid=19697_1864&id=4240&channel=9034" class="twitter"  target="_blank">{{ partial "svgs/icon-form.svg" (dict "width" 18 "height" 19 ) }} 或让我们与您联系</a></li>
                 <li><a href="https://twitter.com/PingCAP" class="twitter"  target="_blank">{{ partial "svgs/icon-twitter.svg" (dict "width" 18 "height" 19 ) }} Twitter</a></li>
                 <li><a href="https://www.linkedin.com/company/pingcap/" class="linkedin" target="_blank">{{ partial "svgs/icon-linked-in.svg" (dict "width" 18 "height" 16 ) }} LinkedIn</a></li>
                 <li><a href="https://www.reddit.com/r/TiDB/" class="reddit" target="_blank">{{ partial "svgs/icon-reddit.svg" (dict "width" 18 "height" 18 ) }} Reddit</a></li>
