--- a/layouts/_default/baseof.tpl.html
+++ b/layouts/_default/baseof.tpl.html
@@ -14,6 +14,7 @@
     {{- partial "head/preload-assets" . -}}
     {{- partial "head/preload-css" (dict "href" "/css/main.css") -}}
     {{- partial "head/preload-css" (dict "href" "https://download.pingcap.com/style/docsearch.min.css") -}}
+    {{- partial "head/preload-css" (dict "href" "/css/vendor/community-ui.css") -}}
     {{- partial "tracking-code/ga-events-js.html" -}}
     <script type="text/javascript">
     if (location.pathname === '/') {
@@ -81,6 +82,10 @@
             dsn: 'https://3f28ed393c5545daa74496b3cdb2e9ba@sentry.io/1887163' 
         });
     </script>
+
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
+    <script type="text/javascript" src="/js/vendor/community-ui.js"></script>
 </body>
 
 </html>
