--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -12,7 +12,8 @@
 // height
 @primaryBtnHeight: 2.5rem;
 @navHeight: 2rem;
-@headerHeight: calc(~"1rem + @{navHeight} + 3px");
+// @headerHeight: calc(~"1rem + @{navHeight} + 3px");
+@headerHeight: 0px;
 @pcFooterHeight: 400px;
 
 // box
