CPT-262 feat: update baseof.tpl to match online scripts

--- a/layouts/_default/baseof.tpl.html
+++ b/layouts/_default/baseof.tpl.html
@@ -14,7 +14,7 @@
     {{- partial "head/preload-assets" . -}}
     {{- partial "head/preload-css" (dict "href" "/css/main.css") -}}
     {{- partial "head/preload-css" (dict "href" "https://download.pingcap.com/style/docsearch.min.css") -}}
-    {{- partial "head/preload-css" (dict "href" "/css/vendor/community-ui.css") -}}
+    {{- partial "head/preload-css" (dict "href" "https://tug.tidb.io/scripts/community-ui.css") -}}
     {{- partial "tracking-code/ga-events-js.html" -}}
     <script type="text/javascript">
     if (location.pathname === '/') {
@@ -85,7 +85,16 @@
 
     <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
-    <script type="text/javascript" src="/js/vendor/community-ui.js"></script>
+    <script type="text/javascript" src="https://tug.tidb.io/scripts/community-ui.js"></script>
+    <script type="text/javascript">
+        _tidb.sharedUI.initHeaderFooter({
+            locale: 'zh',
+            title: 'TiDB Community',
+            logoSrc: 'https://tidb.io/images/community/logo.svg',
+            headerEl: document.querySelector('#header'),
+            footerEl: document.querySelector('#footer'),
+        });
+    </script>
 </body>
 
 </html>
