CPT-265 feat: update meetup url path

--- a/layouts/meetup/list.html
+++ b/layouts/meetup/list.html
@@ -71,7 +71,7 @@
         </div>
     </div>
 
-    {{- partial "archives/readMoreBtn.html" (dict "url" "/meetup/recording" "btnText" "更多文章") }}
+    {{- partial "archives/readMoreBtn.html" (dict "url" "/archived/meetup/recording" "btnText" "更多文章") }}
 
 </section>
 <section class="meetup-landing-page-lecturer">
