CPT_265 feat: migrate to archive/

--- a/layouts/community-cn/devcon2019.html
+++ b/layouts/community-cn/devcon2019.html
@@ -167,7 +167,7 @@
     </section>
 
     <section class="back-to-community-section">
-        <a href="/community-cn/#activities">
+        <a href="/events/#activities">
             <button class="back-to-community">
               更多社区活动
             </button>
