--- a/layouts/community-cn/devcon2020.html
+++ b/layouts/community-cn/devcon2020.html
@@ -141,7 +141,7 @@ DevCon 2020
     </div>
 
     <section class="back-to-community-section">
-        <a href="/community-cn/#activities">
+        <a href="/events/#activities">
             <button class="back-to-community">
                 更多社区活动
             </button>
