--- a/layouts/community-cn/developer-group.html
+++ b/layouts/community-cn/developer-group.html
@@ -87,7 +87,7 @@ Developer Group
     </div>
 
     <div class="back-to-community-section">
-        <a href="/community-cn/">
+        <a href="/events/">
             <button class="back-to-community">
                 回到社区主页
             </button>
