--- a/layouts/community-cn/organization.html
+++ b/layouts/community-cn/organization.html
@@ -23,7 +23,7 @@ Community Organization
               <div class="org-tooltiptext tt-tr">项目管理委员会，为项目核心管理团队，参与 roadmap 制定与社区相关的重大决议。</div>
             </div>
             <div class="branch">
-              <a href="/community-cn/developer-group/"><button class="branchBtn devBtn orgBtn tl j-hover">Developer
+              <a href="/events/developer-group/"><button class="branchBtn devBtn orgBtn tl j-hover">Developer
                   Group</button></a>
               <div class="devSubBtns tr">
                 {{- range $idx, $i := .Site.Data.community_organization.architecture.developer_group -}}
@@ -36,7 +36,7 @@ Community Organization
               </div>
             </div>
             <div class="branch">
-              <a href="/community-cn/user-group/"><button class="branchBtn userBtn orgBtn tl j-hover">User
+              <a href="/events/user-group/"><button class="branchBtn userBtn orgBtn tl j-hover">User
                   Group</button></a>
               <div class="devSubBtns tl">
                 {{- range $idx, $i := .Site.Data.community_organization.architecture.user_group -}}
@@ -309,7 +309,7 @@ Community Organization
   </div>
 
   <div class="back-to-community-section">
-    <a href="/community-cn/">
+    <a href="/events/">
       <button class="back-to-community">
         回到社区主页
       </button>
