--- a/layouts/community/devcon2020.html
+++ b/layouts/community/devcon2020.html
@@ -5,7 +5,7 @@ DevCon 2020
 
 {{- define "headTpl" -}}
 {{ $.Scratch.Set "nav_active" "community" }}
-{{ $.Scratch.Set "data_i18_link" "/community-cn/devcon2020" }}
+{{ $.Scratch.Set "data_i18_link" "/events/devcon2020" }}
 {{- partial "head/preload-css" (dict "href" "/css/community/devcon2020.css") -}}
 {{- partial "head/preload-css" (dict "href" "/css/community/hackathon2019.css") -}}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css" />
@@ -137,7 +137,7 @@ DevCon 2020
     </div>
 
     <!-- <section class="back-to-community-section">
-        <a href="/community-cn/#activities">
+        <a href="/events/#activities">
             <button class="back-to-community">
                 更多社区活动
             </button>
