--- a/layouts/community/events/hackathon2020.html
+++ b/layouts/community/events/hackathon2020.html
@@ -5,7 +5,7 @@
 
 {{- define "headTpl" -}}
     {{$.Scratch.Set "nav_active" "community"}}
-    {{ $.Scratch.Set "data_i18_link" "/community-cn/hackathon2020" }}
+    {{ $.Scratch.Set "data_i18_link" "/events/hackathon2020" }}
     {{- partial "head/preload-css" (dict "href" "/css/community/hackathon2020.css") -}}
     {{- partial "head/preload-css" (dict "href" "/css/tidb-planet/modal.css") -}}
 {{- end -}}
