--- a/layouts/community/index.html
+++ b/layouts/community/index.html
@@ -7,7 +7,7 @@
     {{- partial "head/preload-css" (dict "href" "/css/community/list.css") -}}
     {{- partial "head/preload-css" (dict "href" "/css/article-reading-card.css") -}}
     {{- partial "head/preload-css" (dict "href" "/css/vendor/calendar.css") -}}
-    {{ $.Scratch.Set "data_i18_link" "/community-cn" }}
+    {{ $.Scratch.Set "data_i18_link" "/events" }}
 {{- end -}}
 
 {{- define "main" -}}
