--- a/layouts/community/organization.html
+++ b/layouts/community/organization.html
@@ -5,7 +5,7 @@
 
 {{- define "headTpl" -}}
     {{$.Scratch.Set "nav_active" "community"}}
-    {{ $.Scratch.Set "data_i18_link" "/community-cn/organization" }}
+    {{ $.Scratch.Set "data_i18_link" "/events/organization" }}
     {{- partial "head/preload-css" (dict "href" "/css/community/organization-cn.css") -}}
 {{- end -}}
 
