--- a/layouts/developer/single.html
+++ b/layouts/developer/single.html
@@ -17,7 +17,7 @@ Community Developer
         <div class="container">
             <div class="developer-group-members developer-sig">
                 <div class="back-to-sigs">
-                    <a href="/community-cn/organization#sigs">返回 SIGs</a></div>
+                    <a href="/events/organization#sigs">返回 SIGs</a></div>
                 <div class="loader-spinner">
                     <img class="lazy" src="/images/svgs/loader-spinner.svg" alt="loader spinner" />
                 </div>
