--- a/src/less/community/organization-cn.less
+++ b/src/less/community/organization-cn.less
@@ -391,7 +391,7 @@ button.branchBtn.userBtn.orgBtn.tr {
       }
 
       .github-icon {
-        background: url('/images/github-grey.svg') no-repeat;
+        background: url('/archived/images/github-grey.svg') no-repeat;
         width: 25px;
         height: 25px;
         background-size: cover;
@@ -413,7 +413,7 @@ button.branchBtn.userBtn.orgBtn.tr {
 
       .member-info {
         .github-icon {
-          background: url('/images/github.svg') no-repeat;
+          background: url('/archived/images/github.svg') no-repeat;
           background-size: cover;
 
           p {
@@ -422,7 +422,7 @@ button.branchBtn.userBtn.orgBtn.tr {
         }
 
         .user-github-icon {
-          background: url('/images/github-orange.svg') no-repeat !important;
+          background: url('/archived/images/github-orange.svg') no-repeat !important;
           background-size: cover !important;
 
           p {
