--- a/src/less/index.less
+++ b/src/less/index.less
@@ -199,7 +199,7 @@
     top: 50%;
     margin-top: -15px;
     position: absolute;
-    background-image: url('/images/github-icon.png');
+    background-image: url('/archived/images/github-icon.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
@@ -559,7 +559,7 @@
 
   .bottom {
     height: 320px;
-    background: url('/images/svgs/polygon.svg') no-repeat center top;
+    background: url('/archived/images/svgs/polygon.svg') no-repeat center top;
     background-size: cover;
   }
 
