--- a/layouts/community-cn/list.html
+++ b/layouts/community-cn/list.html
@@ -21,7 +21,7 @@
                     TiDB 社区，和我们一起开启一段精彩的旅程。
                 </div>
                 <div class="btns">
-                    <a href="/community-cn/organization/">
+                    <a href="/events/organization/">
                         <button class="community-btns">
                             <span class="arrow"><img src="/images/svgs/white-right-arrow.svg" alt="Arrow" /></span>
                             <span class="btn-text">了解社区</span>
