--- a/layouts/community-cn/paper-reading.html
+++ b/layouts/community-cn/paper-reading.html
@@ -92,7 +92,7 @@
         </div>
     </div>
     <div class="back-to-community-section">
-        <a href="/community-cn/">
+        <a href="/events/">
             <button class="back-to-community">
               回到社区主页
             </button>
