--- a/layouts/community-cn/techday2018.html
+++ b/layouts/community-cn/techday2018.html
@@ -51,7 +51,7 @@
     </section>
 
     <section class="back-to-community-section">
-        <a href="/community-cn/#activities">
+        <a href="/events/#activities">
             <button class="back-to-community">
               更多社区活动
             </button>
