--- a/layouts/community-cn/user-group.html
+++ b/layouts/community-cn/user-group.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="back-to-community-section">
-        <a href="/community-cn/">
+        <a href="/events/">
             <button class="back-to-community">
               回到社区主页
             </button>
