CPT-262 fix: use favicon of tidb.io

--- a/layouts/partials/head/meta-seo.html
+++ b/layouts/partials/head/meta-seo.html
@@ -22,6 +22,10 @@
     {{ $.Scratch.Set "ogTitle" ($.Scratch.Get "metaTitle") }}
 {{- end -}}
 
+<link rel="apple-touch-icon" sizes="180x180" href="https://tidb.io/favicons/community/apple-touch-icon.png"/>
+<link rel="icon" type="image/png" sizes="32x32" href="https://tidb.io/favicons/community/favicon-32x32.png"/>
+<link rel="icon" type="image/png" sizes="16x16" href="https://tidb.io/favicons/community/favicon-16x16.png"/>
+<link rel="shortcut icon" href="https://tidb.io/favicons/community/favicon.ico"/>
 <meta name="description" content="{{ $.Scratch.Get "summary" }}">
 <meta name="robots" content="noodp">
 <meta name="keywords" content="TiDB, MySQL, HTAP, Open Source, Cloud-Native, NewSQL, Aurora Alternative">
