CP-39 refactor: reuse hackathon2020 script but customize milestone date

--- a/layouts/community-cn/hacking-camp-2021-season-2.html
+++ b/layouts/community-cn/hacking-camp-2021-season-2.html
@@ -79,7 +79,7 @@
 		<h2 class="section__title" id="timeline">Hacking Camp 时间线</h2>
 		<div class="container">
 			<ul class="moments">
-				{{- range $idx, $i := .Site.Data.hacking_camp_2021_s1.moments -}}
+				{{- range $idx, $i := .Site.Data.hacking_camp_2021_s2.moments -}}
 				<li class="moment-item hacking-camp-moment">
 					<div class="moment__milestone"><span class="spot"></span></div>
 					<div class="moment__content">
@@ -147,6 +147,6 @@
 		threshold: 200
 	})
 </script>
-<script type="text/javascript" src="/js/hackathon2020.js"></script>
+<script type="text/javascript" src="/js/hacking_camp_2021s2.js"></script>
 <script type="text/javascript" src="/js/community.js"></script>
 {{- end -}}
